@@ -4,5 +4,7 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="lib" path="C:/android-sdk-windows/flurry/Flurry 2.1/FlurryAgent.jar"/>
+	<classpathentry kind="lib" path="C:/android-sdk-windows/CommonsWare/CWAC-MergeAdapter.jar"/>
+	<classpathentry kind="lib" path="C:/android-sdk-windows/CommonsWare/CWAC-SackOfViewsAdapter.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
